--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -1,5 +1,11 @@
 {
 "appTitle":"اسلامي",
 "suraName":"اسماء السور",
-"ahadeth":"احاديث"
+"ahadeth":"احاديث",
+"english":"انجليزي",
+"arabic":"عربي",
+"setting":"الاعدادات",
+"radio":"الراديو",
+"sebha":"سبحه",
+"quran":"القراّن"
 }
