--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,5 +1,11 @@
 {
 "appTitle":"Islami",
 "suraName":"Sura Name",
-"ahadeth":"Ahadeth"
+"ahadeth":"Ahadeth",
+"english":"English",
+"arabic":"Arabic",
+"setting":"Setting",
+"radio":"Radio",
+"sebha":"Sebha",
+"quran":"Quran"
 }
