--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -7,5 +7,9 @@
 "setting":"الاعدادات",
 "radio":"الراديو",
 "sebha":"سبحه",
-"quran":"القراّن"
+"quran":"القراّن",
+"language":"اللغه",
+"mode":"تاثير",
+"light":"ساطع",
+"dark":"داكن"
 }
